week1/main/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-response-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: main-svc
          servicePort: 2345
